--- a/CCIP/CCIP/Base.lproj/Main.storyboard
+++ b/CCIP/CCIP/Base.lproj/Main.storyboard
@@ -323,7 +323,7 @@ Please copy and paste the token into next field or click the token link in the r
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Rectangle.png" translatesAutoresizingMaskIntoConstraints="NO" id="7Jb-pl-Dgp">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle.png" translatesAutoresizingMaskIntoConstraints="NO" id="7Jb-pl-Dgp">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="239"/>
                                 <color key="backgroundColor" red="1" green="0.3999023438" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -345,7 +345,7 @@ Please copy and paste the token into next field or click the token link in the r
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CbY-uR-bp6" customClass="iCarousel">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="687"/>
+                                <rect key="frame" x="0.0" y="139.33333333333331" width="414" height="547.66666666666674"/>
                                 <connections>
                                     <outlet property="dataSource" destination="6Xx-bx-CvE" id="sbk-hj-VTL"/>
                                     <outlet property="delegate" destination="6Xx-bx-CvE" id="Sub-2J-lwi"/>
@@ -371,9 +371,8 @@ Please copy and paste the token into next field or click the token link in the r
                             <constraint firstAttribute="trailing" secondItem="CbY-uR-bp6" secondAttribute="trailing" id="2mJ-1w-g6I"/>
                             <constraint firstAttribute="trailing" secondItem="QsP-yd-6v9" secondAttribute="trailing" id="79a-j6-D2n"/>
                             <constraint firstItem="QsP-yd-6v9" firstAttribute="leading" secondItem="bgm-CO-9gf" secondAttribute="leading" id="7hS-rR-QQn"/>
-                            <constraint firstItem="CbY-uR-bp6" firstAttribute="top" secondItem="7Jb-pl-Dgp" secondAttribute="top" id="AUB-7I-Pve"/>
+                            <constraint firstItem="7Jb-pl-Dgp" firstAttribute="centerX" secondItem="bgm-CO-9gf" secondAttribute="centerX" id="B2h-aQ-BAB"/>
                             <constraint firstItem="QsP-yd-6v9" firstAttribute="top" secondItem="bgm-CO-9gf" secondAttribute="top" id="Beq-94-PZG"/>
-                            <constraint firstItem="CbY-uR-bp6" firstAttribute="top" secondItem="bgm-CO-9gf" secondAttribute="top" id="Hw6-Tl-RXM"/>
                             <constraint firstItem="01s-25-wxe" firstAttribute="centerX" secondItem="bgm-CO-9gf" secondAttribute="centerX" id="Kd8-ms-AQb"/>
                             <constraint firstItem="CbY-uR-bp6" firstAttribute="top" secondItem="5Ha-Am-1I7" secondAttribute="bottom" id="LSs-JV-vmE"/>
                             <constraint firstItem="vJH-ug-pK0" firstAttribute="width" secondItem="bgm-CO-9gf" secondAttribute="width" id="MyN-5e-Lkd"/>
@@ -386,14 +385,16 @@ Please copy and paste the token into next field or click the token link in the r
                             <constraint firstItem="CbY-uR-bp6" firstAttribute="leading" secondItem="bgm-CO-9gf" secondAttribute="leading" id="gMq-to-53r"/>
                             <constraint firstItem="y7L-AH-63W" firstAttribute="top" secondItem="CbY-uR-bp6" secondAttribute="bottom" id="k4G-uU-dAY"/>
                             <constraint firstItem="vJH-ug-pK0" firstAttribute="top" secondItem="01s-25-wxe" secondAttribute="bottom" constant="20" id="mhq-y0-Qq7"/>
+                            <constraint firstItem="7Jb-pl-Dgp" firstAttribute="top" secondItem="bgm-CO-9gf" secondAttribute="top" id="mvY-ov-Fzd"/>
                             <constraint firstItem="01s-25-wxe" firstAttribute="top" secondItem="7Jb-pl-Dgp" secondAttribute="top" constant="40" id="rjl-f5-pJl"/>
+                            <constraint firstItem="CbY-uR-bp6" firstAttribute="top" secondItem="vJH-ug-pK0" secondAttribute="bottom" constant="10" id="woU-wY-n2Q"/>
                             <constraint firstAttribute="trailing" secondItem="AvZ-Qm-ma6" secondAttribute="trailing" id="zeH-a0-3t8"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="LSs-JV-vmE"/>
                                 <exclude reference="Ppj-kI-MvU"/>
                                 <exclude reference="Txm-hh-gr4"/>
+                                <exclude reference="LSs-JV-vmE"/>
                             </mask>
                         </variation>
                     </view>
@@ -409,7 +410,7 @@ Please copy and paste the token into next field or click the token link in the r
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M8l-mK-H7w" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-519" y="1006"/>
+            <point key="canvasLocation" x="-520.28985507246375" y="1005.9782608695652"/>
         </scene>
         <!--Checkin Card View Controller-->
         <scene sceneID="SiN-EJ-8ci">
@@ -424,7 +425,7 @@ Please copy and paste the token into next field or click the token link in the r
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uyl-BJ-dF0">
-                                <rect key="frame" x="35" y="120" width="350" height="160"/>
+                                <rect key="frame" x="35" y="10" width="350" height="160"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8/20" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="q04-AM-eVF">
                                         <rect key="frame" x="25" y="26" width="172" height="44"/>
@@ -466,7 +467,7 @@ Please copy and paste the token into next field or click the token link in the r
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="「分享」一直以來都是 COSCUP 的主軸，我們相信，唯有透過分享、討論與眾人的再創造，才能真正落實 open source 的精神與信念，帶給這個世界更多的可能。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KUP-DK-ov7">
-                                <rect key="frame" x="60" y="310" width="300" height="175"/>
+                                <rect key="frame" x="60" y="200" width="300" height="175"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="175" id="cK8-Qt-OHm"/>
                                     <constraint firstAttribute="height" constant="150" id="zth-f1-7uE"/>
@@ -481,7 +482,7 @@ Please copy and paste the token into next field or click the token link in the r
                                 </variation>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HPS-iQ-rbE">
-                                <rect key="frame" x="60" y="523" width="300" height="46"/>
+                                <rect key="frame" x="60" y="413" width="300" height="46"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="46" id="hjM-3v-dKt"/>
                                 </constraints>
@@ -497,8 +498,8 @@ Please copy and paste the token into next field or click the token link in the r
                             <constraint firstItem="KUP-DK-ov7" firstAttribute="top" secondItem="Uyl-BJ-dF0" secondAttribute="bottom" constant="30" id="A2W-Uz-Fvu"/>
                             <constraint firstItem="HPS-iQ-rbE" firstAttribute="top" secondItem="KUP-DK-ov7" secondAttribute="bottom" constant="38" id="CQb-mZ-P4k"/>
                             <constraint firstItem="HPS-iQ-rbE" firstAttribute="centerX" secondItem="KUP-DK-ov7" secondAttribute="centerX" id="KdS-21-58h"/>
-                            <constraint firstItem="Uyl-BJ-dF0" firstAttribute="centerY" secondItem="CVw-Vr-a5B" secondAttribute="centerY" constant="-100" id="PFq-Fb-fuF"/>
                             <constraint firstItem="HPS-iQ-rbE" firstAttribute="width" secondItem="KUP-DK-ov7" secondAttribute="width" id="TTv-3S-VoH"/>
+                            <constraint firstItem="Uyl-BJ-dF0" firstAttribute="top" secondItem="CVw-Vr-a5B" secondAttribute="topMargin" constant="10" id="azT-LE-Qnv"/>
                             <constraint firstItem="Uyl-BJ-dF0" firstAttribute="leading" secondItem="CVw-Vr-a5B" secondAttribute="leadingMargin" constant="15" id="eBF-2I-yn5"/>
                             <constraint firstItem="KUP-DK-ov7" firstAttribute="leading" secondItem="CVw-Vr-a5B" secondAttribute="leading" constant="60" id="k5g-lf-JW6"/>
                             <constraint firstAttribute="trailing" secondItem="KUP-DK-ov7" secondAttribute="trailing" constant="60" id="ksw-mE-Pi8"/>
